# Visor

./: .env.example  .gitignore  Employee.db  LICENSE  README.md  backend.py  main.py  ocr.py  pyproject.toml  qdrant.py
app/: backend.py  config.py  database.py  model_detection.py  ocr.py  person.py  pipeline.py  qdrant.py  utils.py
app/core/: config.py  decorators.py  thread_storage.py  utils.py
app/database/qdrant/: qdrant.py
app/ml/: model_detection.py
app/services/: message.py  pipeline.py
backend/: Dockerfile  main.py  requirements.txt  setup.py
backend/api/: websocket.py
backend/core/: config.py  utils.py
backend/cpp_utils/: CMakeLists.txt  iou_kernel.cpp
backend/database/qdrant/: qdrant.py
backend/ml/: detection.py  ocr.py  recognition.py
backend/services/: person.py  pipeline.py
backend/workers/: stream.py
camera/: stream.py
deployment/: .env.example  docker-compose.yml
frontend/: index.html
