[project]
name = "visor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.131.0",
    "insightface>=0.7.3",
    "levenshtein>=0.27.3",
    "onnxruntime>=1.24.2",
    "opencv-contrib-python>=4.13.0.92",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.17.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "ultralytics>=8.4.14",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
